<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_products"
        android:icon="@drawable/ic_add_black_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_add_product"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_update_email"
        android:orderInCategory="3"
        android:title="@string/menu_update_email"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="4"
        android:title="@string/menu_change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_account"
        android:orderInCategory="5"
        android:title="@string/menu_delete_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="6"
        android:title="@string/menu_sign_out"
        android:visible="true"
        app:showAsAction="never" />
</menu>